--- a/exam/style.css
+++ b/exam/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     font-family: '標楷體';
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .main {
@@ -14,9 +14,9 @@
     margin: 8px auto;
 }
 
-body>*:not(aside, section),
-aside>*,
-section>* {
+body>*:not(.aside, .section),
+.aside>*,
+.section>* {
     border: 1px solid lightgrey;
 }
 
@@ -25,39 +25,42 @@ section>* {
     height: 65px;
 }
 
-
 .aside {
     display: flex;
     flex-direction: column;
     flex-basis: 215px;
-    height: calc(768px - 65px -20px);
+    height: calc(768px - 65px - 20px);
 }
 
 .menu {
+    display: flex;
+    flex-direction: column;
     flex-basis: calc(100% - 25px);
     text-align: center;
+    align-items: center;
 }
 
-.menu header {
+.menu>header {
     font-size: 24px;
     color: #FF00FF;
-    text-decoration: underline;
+    text-decoration: underline blue;
+    margin: 20px auto;
 }
 
 .menu>a {
-    display: block;
-    font-size: 16px;
-    text-decoration: none;
-    color: #000000;
-    background-image: url(./images/menu1.png) no-repeat;
+    /* display: block; */
     width: 200px;
     height: 35px;
-    margin: 10px auto;
+    margin-top: 5px;
     padding-top: 8px;
+    font-size: 16px;
+    /* text-decoration: none; */
+    color: #000000;
+    background: url("./images/menu1.png") no-repeat;
 }
 
 .menu>a:hover {
-    background-image: url(./images/menu2.png) no-repeat;
+    background: url("./images/menu2.png") no-repeat;
 }
 
 .update {
@@ -68,10 +71,10 @@ section>* {
 }
 
 .section {
+    flex-basis: calc(100% - 215px);
     display: flex;
     flex-direction: column;
-    flex-basis: calc(100% - 215px);
-    /* ?為什麼不用打height? */
+    /* ?為什麼不用打height? 昱彤解答: 會抓左邊的尺寸*/
 }
 
 .marqee {
@@ -85,9 +88,16 @@ section>* {
     flex-basis: calc(100% - 29px);
 
 }
+.content>iframe{
+    width: 100%;
+    height: 100%;
+}
 
 .footer {
     flex-basis: 1000px;
     height: 20px;
+    text-align: center;
+    font-size: 16px;
+    color: #000000;
 
 }
